# nt

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vcpkg-configuration.json  vcpkg.json
apps/player/: CMakeLists.txt  main.cpp
apps/sandbox/: CMakeLists.txt  main.cpp  sandbox_app.cpp  sandbox_app.hpp  sandbox_demo_harness.cpp  sandbox_demo_harness.hpp
engine/: CMakeLists.txt
engine/src/: active_text.cpp  active_text_layout.cpp  active_text_playback.cpp  app.cpp  assets.cpp  engine.cpp  platform_sdl.cpp  renderer_bgfx.cpp  renderer_stub.cpp  runtime_audio_adapter.cpp  runtime_command.cpp  runtime_debug_mutation.cpp  runtime_debug_snapshot.cpp  runtime_layout_manager.cpp  runtime_presentation_bridge.cpp  runtime_preview_controller.cpp  runtime_shell.cpp  runtime_system_layouts.cpp  runtime_transition_manager.cpp  runtime_ui_contracts.cpp  runtime_ui_playback.cpp  surface.cpp  ui_debug_imgui.cpp  ui_debug_stub.cpp  ui_runtime_rmlui.cpp  ui_runtime_rmlui_file_interface.hpp  world_presentation.cpp  world_transition.cpp
tests/: CMakeLists.txt  fake_script_source.hpp  runtime_test_services.hpp  surface_tests.cpp
tests/animation/: tween_service_tests.cpp
tests/assets/: asset_manager_tests.cpp  asset_path_tests.cpp  asset_reader_tests.cpp  asset_request_orchestrator_tests.cpp  asset_streaming_contract_tests.cpp  asset_telemetry_tests.cpp  audio_asset_preparation_tests.cpp  directory_asset_source_tests.cpp  editor_asset_profiler_benchmark.cpp  editor_asset_profiler_json_tests.cpp  editor_asset_profiler_service_tests.cpp  mandatory_asset_gate_tests.cpp  memory_asset_source_tests.cpp  runtime_package_loader_tests.cpp  structured_prefetch_tests.cpp  visual_asset_preparation_tests.cpp  zip_asset_source_tests.cpp
tests/cmake/: editor_asset_profiler_build_policy.cmake  editor_asset_profiler_preset_policy.cmake  no_committed_shader_headers.cmake  phase_9a_production_asset_paths.cmake  player_runtime_package_smoke.cmake  production_asset_path_policy.cmake  rmlui_font_raster_default_tests.cpp  rmlui_font_raster_scale_patch_tests.cpp  rmlui_media_query_patch_tests.cpp  rmlui_patch_framework_test.cpp  rmlui_text_scale_patch_tests.cpp
tests/core/: compatibility_completion_tests.cpp  compiled_package_tests.cpp  compiled_project_model_tests.cpp  compiled_project_wire_tests.cpp  cutscene_controller_tests.cpp  dialogue_controller_tests.cpp  editor_api_tests.cpp  editor_runtime_protocol_tests.cpp  entity_ref_tests.cpp  flow_executor_tests.cpp  game_session_tests.cpp  gameplay_pause_tests.cpp  json_access_tests.cpp  legacy_entity_schema_tests.cpp  loading_progress_tests.cpp  package_export_storage_tests.cpp  player_bootstrap_tests.cpp  presentation_checkpoint_contracts_tests.cpp  presentation_coordinator_tests.cpp  project_document_tests.cpp  project_model_tests.cpp  project_validator_tests.cpp  result_tests.cpp  rich_text_tests.cpp  runtime_clock_tests.cpp  runtime_controller_tests.cpp  runtime_domain_types_tests.cpp  runtime_events_tests.cpp  runtime_messages_tests.cpp  runtime_presentation_tests.cpp  runtime_project_codec_tests.cpp  runtime_session_host_tests.cpp  runtime_ui_view_tests.cpp  runtime_user_settings_tests.cpp  runtime_value_tests.cpp  save_document_tests.cpp  save_state_tests.cpp  session_state_tests.cpp  shared_evaluator_tests.cpp  typed_save_slot_store_tests.cpp
tests/fuzz/: compiled_project_decoder_fuzz.cpp  parser_fuzz.cpp
tests/host/: audio_preview_adapter_tests.cpp  debug_ui_isolation_tests.cpp  game_host_tests.cpp  host_characterization_tests.cpp  host_contracts_tests.cpp  host_input_router_tests.cpp  layout_realizer_tests.cpp  miniaudio_build_mode_tests.cpp  screenshot_capture_tests.cpp
tests/jobs/: job_contract_tests.cpp  job_executor_tests.cpp  sdl_thread_pool_job_executor_tests.cpp
tests/public_headers/: engine_facade.cpp  public_header_probe_guard.hpp  runtime_fake_ports.cpp
tests/render/: material_asset_tests.cpp  material_binder_tests.cpp  reference_resolution_contract_tests.cpp  screenshot_capture_tests.cpp  shader_compiler_tests.cpp  shader_manifest_tests.cpp  shader_package_export_tests.cpp  shader_variant_tests.cpp  world_presentation_tests.cpp  world_transition_tests.cpp
tests/runtime/: runtime_contracts_tests.cpp  runtime_shell_tests.cpp
tests/script/: compiled_runtime_tests.cpp  game_bindings_tests.cpp  runtime_audio_adapter_tests.cpp  runtime_checkpoint_service_tests.cpp  runtime_script_executor_tests.cpp  script_runtime_tests.cpp  typed_dialogue_execution_tests.cpp  typed_execution_kernel_tests.cpp  typed_interaction_execution_tests.cpp  typed_map_execution_tests.cpp  typed_room_execution_tests.cpp  typed_runtime_session_tests.cpp
tests/text/: text_engine_tests.cpp
tests/tween/: tween_service_tests.cpp
tests/ui/: active_text_layout_tests.cpp  active_text_playback_tests.cpp  active_text_presenter_tests.cpp  active_text_tests.cpp  layout_scale_readback_verifier.cpp  postprocess_scope_readback_verifier.cpp  presentation_readback_verifier.cpp  rmlui_adapter_contract_tests.cpp  rmlui_advanced_gallery_asset_tests.cpp  rmlui_conservative_mask_bounds_tests.cpp  rmlui_custom_components_tests.cpp  rmlui_document_binder_tests.cpp  rmlui_event_disposition_tests.cpp  rmlui_feature_fixtures_verifier.cpp  rmlui_file_interface_tests.cpp  rmlui_layer_system_tests.cpp  rmlui_lifecycle_tests.cpp  rmlui_ppm_test_utils.hpp  rmlui_readback_verifier.cpp  rmlui_render_bounds_tests.cpp  rmlui_render_interface_lifecycle_tests.cpp  rmlui_render_pass_scheduler_tests.cpp  rmlui_render_planning_tests.cpp  rmlui_template_resolver_tests.cpp  runtime_layout_manager_tests.cpp  runtime_system_layouts_tests.cpp  runtime_ui_binder_tests.cpp  runtime_ui_lifecycle_fixture.hpp  runtime_ui_lifecycle_integration_tests.cpp  texture_sampling_readback_verifier.cpp  title_layout_asset_tests.cpp  world_presentation_readback_verifier.cpp  world_transition_readback_verifier.cpp
tests/web/: player_bootstrap_tests.mjs
tools/benchmark/: CMakeLists.txt  main.cpp
tools/editor_tool/: CMakeLists.txt  (+1 more)
(+1287 files in other folders)
